[metadata]
name = energy_dagster
version = 0.0.0

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires=
    dagster
    dagster-dbt
    dbt-postgres
    open-mastr
    SQLAlchemy
    geopandas
    numpy
    openpyxl
    GeoAlchemy2
    docker
    cjio
    dagster-webserver


[options.extras_require]
dev =
    pytest
    black
    dbt-osmosis
    sqlfluff
    pre-commit
    mkdocstrings[python]
    mkdocs-material